--- a/qml/qml.qrc
+++ b/qml/qml.qrc
@@ -9,9 +9,19 @@
         <file>../assets/card_3.svg</file>
         <file>../assets/card_4.svg</file>
         <file>../assets/card_1.svg</file>
-        <file>../assets/card_5.svg</file>
-        <file>../assets/card_6.svg</file>
         <file>../assets/cat.ogg</file>
         <file>logic.cpp</file>
+        <file>GameView.qml</file>
+        <file>../assets/card2_1.svg</file>
+        <file>../assets/card2_2.svg</file>
+        <file>../assets/card2_3.svg</file>
+        <file>../assets/card2_4.svg</file>
+        <file>Lvl1.qml</file>
+        <file>MainPage.qml</file>
+        <file>../assets/card3_1.png</file>
+        <file>../assets/card3_2.png</file>
+        <file>../assets/bgd1.png</file>
+        <file>../assets/card3_3.png</file>
+        <file>../assets/card3_4.png</file>
     </qresource>
 </RCC>
